--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ header {
 	align-items: center;
 	margin-bottom: 16px;
 	padding: 8px;
-	background-color: #7451eb;
+	background-color: #72b016;
 	text-align: center;
 	color: white;
 }
